--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500&display=swap" rel="stylesheet">
     <link rel='shortcut icon' href='Bilder/favicon.png' type="image/png">
 
-    <title>Grupp 6!</title>
+    <title>Gaming History</title>
 </head>
 
 <body>
