--- a/marioBros.html
+++ b/marioBros.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <h1 class="SuperMarioFont">Super Mario Brothers!</h1>
+        <h1>Super Mario Brothers!</h1>
 
         <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis, iusto!</h2>
         
